--- a/package.json
+++ b/package.json
@@ -4,17 +4,21 @@
   "description": "API project for freeCodeCamp",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "ejs": "^3.1.9",
+    "express": "^4.17.1",
+    "express-ejs-layouts": "^2.5.1",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.0.3"
   },
   "license": "MIT",
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "nodemon": "^3.0.3"
   }
 }
